--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.skillfactory</groupId>
   <artifactId>java-utils</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>Java Utils</name>
   <!-- FIXME change it to the project's website -->
